# safety-intervention-reduction

./: .gitignore  Dockerfile  Dockerfile.root  LICENSE  README.md  app.py  config_custom.py  config_presets.py  docker-compose.yml  docker_root_commands.txt  requirements.txt  run_exp.sh  test_dummy.py
Safety_Gym/: setup.py
Safety_Gym/safety_gym/envs/: engine.py
Safety_Gym/safety_gym/xmls/: point.xml
configs/: robot_parameters_car.yaml  robot_parameters_point.yaml  trajectory_parameters_car.yaml  trajectory_parameters_point.yaml
plotting/: prepare_data.py
rlpyt/agents/pg/: gaussian.py
sara-shield/: LICENSE  README.md  setup.py  setup_no_conda.py
sara-shield/safety_shield/: CMakeLists.txt  run_cmake.sh
sara-shield/safety_shield/bindings/: safety_shield_bindings.cpp
sara-shield/safety_shield/config/: cmu_mocap_no_hand.yaml  human_reach_test_arm_pos.yaml  human_reach_test_single_joint.yaml  human_reach_test_single_joint_error.yaml  robot_reach_test_single_joint.yaml
sara-shield/safety_shield/include/safety_shield/: exceptions.h  gym_traj_planner.h  long_term_traj.h  motion.h  obstacle_reach.h  path.h  robot_reach.h  rviz_marker.h  safety_shield.h  verify.h  verify_iso.h
sara-shield/safety_shield/src/: debug.cc  gym_traj_planner.cc  long_term_traj.cc  motion.cc  obstacle_reach.cc  path.cc  robot_reach.cc  safety_shield.cc  verify_iso.cc
sara-shield/safety_shield/tests/bindings/: test_ltt.py  test_motion.py  test_safety_shield.py
sara-shield/safety_shield/tests/include/: human_reach_fixture.h  long_term_traj_fixture.h  motion_fixture.h  path_fixture.h  robot_reach_fixture.h  safety_shield_fixture.h  verify_iso_fixture.h
sara-shield/safety_shield/tests/src/: human_reach_tests.cc  long_term_traj_tests.cc  motion_tests.cc  path_tests.cc  robot_reach_tests.cc  safety_shield_tests.cc  verify_iso_tests.cc
src/: activate_shield.py  agents.py  collectors.py  cpu_sampler.py  gym_wrapper.py  runner.py
src/env/: gym_engine.py  mujoco.py  suite.py
